--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <title>W3.CSS Template</title>
+  <link rel="stylesheet" href="style.css" />
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
@@ -99,11 +101,10 @@
     <!-- Image Header -->
     <div class="w3-display-container w3-animate-opacity">
       <img
-        src="/w3images/sailboat.jpg"
+        src="https://64.media.tumblr.com/428bcc0a61582b9c13ce238e6d868da1/40c053104a0d49de-e4/s500x750/824df9206c56fc9b696c995f83ec15378f3d2dc9.jpg"
         alt="boat"
         style="width: 100%; min-height: 350px; max-height: 600px;"
       />
-      <div class="w3-container w3-display-bottomleft w3-margin-bottom">
         <button
           onclick="document.getElementById('id01').style.display='block'"
           class="w3-button w3-xlarge w3-theme w3-hover-teal"
@@ -128,13 +129,7 @@
         </header>
         <div class="w3-container">
           <p>Cool huh? Ok, enough teasing around..</p>
-          <p>
-            Go to our
-            <a class="w3-text-teal" href="/w3css/default.asp"
-              >W3.CSS Tutorial</a
-            >
-            to learn more!
-          </p>
+          
         </div>
         <footer class="w3-container w3-teal">
           <p>Modal footer</p>
@@ -142,9 +137,18 @@
       </div>
     </div>
 
-    <!-- Team Container -->
-    <div class="w3-container w3-padding-64 w3-center" id="team">
-      <h2>OUR TEAM</h2>
+    <title>Glitch</title>
+  <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="container">
+  <div class="glitch" data-text="lucywork">lucys wo</div>
+  <div class="glow">lucys work</div>
+  <p class="subtitle">IMPRACTICAL DEVELOPER</p>
+  </div>
+  <div class="scanlines"></div>
+  
       <p>Meet the team - our office rats:</p>
 
       <div class="w3-row">
