--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
 <html>
-  <title>W3.CSS Template</title>
+  <title>lucys art dumps</title>
   <link rel="stylesheet" href="style.css" />
 
   <meta charset="UTF-8" />
@@ -50,12 +50,12 @@
         <a
           href="#team"
           class="w3-bar-item w3-button w3-hide-small w3-hover-white"
-          >Team</a
+          >my work!</a
         >
         <a
           href="#work"
           class="w3-bar-item w3-button w3-hide-small w3-hover-white"
-          >Work</a
+          >proccess</a
         >
         <a
           href="#pricing"
@@ -69,19 +69,13 @@
         >
         <div class="w3-dropdown-hover w3-hide-small">
           <button class="w3-button" title="Notifications">
-            Dropdown <i class="fa fa-caret-down"></i>
-          </button>
-          <div class="w3-dropdown-content w3-card-4 w3-bar-block">
-            <a href="#" class="w3-bar-item w3-button">Link</a>
-            <a href="#" class="w3-bar-item w3-button">Link</a>
-            <a href="#" class="w3-bar-item w3-button">Link</a>
-          </div>
+        
         </div>
         <a
           href="#"
           class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-teal"
           title="Search"
-          ><i class="fa fa-search"></i
+     
         ></a>
       </div>
 
@@ -158,9 +152,8 @@
   
         <div class="w3-quarter">
           <img
-            src="/w3images/avatar.jpg"
-            alt="Boss"
-            style="width: 45%;"
+          src="img/koko.png"
+            style="width: 105%;"
             class="w3-circle w3-hover-opacity"
           />
           <h3>character deisgn</h3>
@@ -169,9 +162,9 @@
 
         <div class="w3-quarter">
           <img
-            src="/w3images/avatar.jpg"
+            src="/img/uiui.png"
             alt="Boss"
-            style="width: 45%;"
+            style="width: 105%;"
             class="w3-circle w3-hover-opacity"
           />
           <h3>patrioge tributes </h3>
@@ -180,9 +173,9 @@
 
         <div class="w3-quarter">
           <img
-            src="/w3images/avatar.jpg"
+            src="/img/lopo.png"
             alt="Boss"
-            style="width: 45%;"
+            style="width: 105%;"
             class="w3-circle w3-hover-opacity"
           />
           <h3>doodles</h3>
@@ -191,9 +184,9 @@
 
         <div class="w3-quarter">
           <img
-            src="/w3images/avatar.jpg"
+            src="/img/catsu.png"
             alt="Boss"
-            style="width: 45%;"
+            style="width: 105%;"
             class="w3-circle w3-hover-opacity"
           />
           <h3>non lined art</h3>
@@ -215,7 +208,7 @@
 
       <div class="w3-quarter">
         <div class="w3-card w3-white">
-          <img src="/w3images/snow.jpg" alt="Snow" style="width: 100%;" />
+          <img src="/img/out.png" alt="Snow" style="width: 150%;" />
           <div class="w3-container">
             <h3>step 1</h3>
             <h4>sketch</h4>
@@ -229,7 +222,7 @@
 
       <div class="w3-quarter">
         <div class="w3-card w3-white">
-          <img src="/w3images/lights.jpg" alt="Lights" style="width: 100%;" />
+          <img src="/img/line.png" alt="Lights" style="width: 120%;" />
           <div class="w3-container">
             <h3>step 2</h3>
             <h4>Trade</h4>
@@ -243,9 +236,9 @@
       <div class="w3-quarter">
         <div class="w3-card w3-white">
           <img
-            src="/w3images/mountains.jpg"
+            src="/img/pop.png"
             alt="Mountains"
-            style="width: 100%;"
+            style="width: 150%;"
           />
           <div class="w3-container">
             <h3>step 3</h3>
@@ -277,15 +270,15 @@
       <div class="w3-third w3-margin-bottom">
         <ul class="w3-ul w3-border w3-hover-shadow">
           <li class="w3-theme">
-            <p class="w3-xlarge">Basic</p>
+            <p class="w3-xlarge">head and neck</p>
           </li>
-          <li class="w3-padding-16"><b>10GB</b> Storage</li>
-          <li class="w3-padding-16"><b>10</b> Emails</li>
-          <li class="w3-padding-16"><b>10</b> Domains</li>
-          <li class="w3-padding-16"><b>Endless</b> Support</li>
+          <li class="w3-padding-16"><b>only head shots</b>-neck included</li>
+          <li class="w3-padding-16"><b>fully</b> colored</li>
+          <li class="w3-padding-16"><b>accepts</b> custom characters</li>
+          <li class="w3-padding-16"><b>Endless</b> possabilitys</li>
           <li class="w3-padding-16">
-            <h2 class="w3-wide"><i class="fa fa-usd"></i> 10</h2>
-            <span class="w3-opacity">per month</span>
+            <h2 class="w3-wide"><i class="fa fa-usd"></i> 30</h2>
+            <span class="w3-opacity">for one</span>
           </li>
           <li class="w3-theme-l5 w3-padding-24">
             <button class="w3-button w3-teal w3-padding-large">
@@ -298,15 +291,15 @@
       <div class="w3-third w3-margin-bottom">
         <ul class="w3-ul w3-border w3-hover-shadow">
           <li class="w3-theme-l2">
-            <p class="w3-xlarge">Pro</p>
+            <p class="w3-xlarge">torso and up</p>
           </li>
-          <li class="w3-padding-16"><b>25GB</b> Storage</li>
-          <li class="w3-padding-16"><b>25</b> Emails</li>
-          <li class="w3-padding-16"><b>25</b> Domains</li>
-          <li class="w3-padding-16"><b>Endless</b> Support</li>
+          <li class="w3-padding-16"><b>clothing</b> will be drawn</li>
+          <li class="w3-padding-16"><b>no</b> nsfw</li>
+          <li class="w3-padding-16"><b>or</b> furries</li>
+          <li class="w3-padding-16"><b>Endless</b> possabilitys</li>
           <li class="w3-padding-16">
-            <h2 class="w3-wide"><i class="fa fa-usd"></i> 25</h2>
-            <span class="w3-opacity">per month</span>
+            <h2 class="w3-wide"><i class="fa fa-usd"></i> 55</h2>
+            <span class="w3-opacity">per character</span>
           </li>
           <li class="w3-theme-l5 w3-padding-24">
             <button class="w3-button w3-teal w3-padding-large">
@@ -319,15 +312,15 @@
       <div class="w3-third w3-margin-bottom">
         <ul class="w3-ul w3-border w3-hover-shadow">
           <li class="w3-theme">
-            <p class="w3-xlarge">Premium</p>
+            <p class="w3-xlarge">full body character</p>
           </li>
-          <li class="w3-padding-16"><b>50GB</b> Storage</li>
-          <li class="w3-padding-16"><b>50</b> Emails</li>
-          <li class="w3-padding-16"><b>50</b> Domains</li>
-          <li class="w3-padding-16"><b>Endless</b> Support</li>
+          <li class="w3-padding-16"><b>all</b> articles of clothing</li>
+          <li class="w3-padding-16"><b>no furries</b> Emails</li>
+          <li class="w3-padding-16"><b>20 dollars</b> per added chracter</li>
+          <li class="w3-padding-16"><b>Endless</b> possability</li>
           <li class="w3-padding-16">
-            <h2 class="w3-wide"><i class="fa fa-usd"></i> 50</h2>
-            <span class="w3-opacity">per month</span>
+            <h2 class="w3-wide"><i class="fa fa-usd"></i> 90</h2>
+            <span class="w3-opacity">per kid</span>
           </li>
           <li class="w3-theme-l5 w3-padding-24">
             <button class="w3-button w3-teal w3-padding-large">
@@ -344,20 +337,20 @@
         <div class="w3-col m5">
           <div class="w3-padding-16">
             <span class="w3-xlarge w3-border-teal w3-bottombar"
-              >Contact Us</span
+              >Contact me!</span
             >
           </div>
           <h3>Address</h3>
-          <p>Swing by for a cup of coffee, or whatever.</p>
+          <p>if you stop buy get me a new stuffie while your on your way here.</p>
           <p>
-            <i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> Chicago, US
+            <i class="fa fa-map-marker w3-text-teal w3-xlarge"></i> jz, US
           </p>
           <p>
-            <i class="fa fa-phone w3-text-teal w3-xlarge"></i> +00 1515151515
+            <i class="fa fa-phone w3-text-teal w3-xlarge"></i> +00 696201097
           </p>
           <p>
             <i class="fa fa-envelope-o w3-text-teal w3-xlarge"></i>
-            test@test.com
+            idn****@ouou.com
           </p>
         </div>
         <div class="w3-col m7">
@@ -379,7 +372,7 @@
               <input class="w3-input" type="text" name="Message" required />
             </div>
             <input class="w3-check" type="checkbox" checked name="Like" />
-            <label>I Like it!</label>
+            <label>thanks cutie!</label>
             <button type="submit" class="w3-button w3-right w3-theme">
               Send
             </button>
@@ -390,7 +383,7 @@
 
     <!-- Image of location/map -->
     <img
-      src="/w3images/map.jpg"
+      src="/img/bud.png"
       class="w3-image w3-greyscale-min"
       style="width: 100%;"
     />
