--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
         <div class="w3-quarter">
           <img
-            src="/img/uiui.png"
+            src="img/uiui.png"
             alt="Boss"
             style="width: 105%;"
             class="w3-circle w3-hover-opacity"
@@ -173,7 +173,7 @@
 
         <div class="w3-quarter">
           <img
-            src="/img/lopo.png"
+            src="img/lopo.png"
             alt="Boss"
             style="width: 105%;"
             class="w3-circle w3-hover-opacity"
@@ -184,7 +184,7 @@
 
         <div class="w3-quarter">
           <img
-            src="/img/catsu.png"
+            src="img/catsu.png"
             alt="Boss"
             style="width: 105%;"
             class="w3-circle w3-hover-opacity"
@@ -208,7 +208,7 @@
 
       <div class="w3-quarter">
         <div class="w3-card w3-white">
-          <img src="/img/out.png" alt="Snow" style="width: 150%;" />
+          <img src="img/out.png" alt="Snow" style="width: 150%;" />
           <div class="w3-container">
             <h3>step 1</h3>
             <h4>sketch</h4>
@@ -222,7 +222,7 @@
 
       <div class="w3-quarter">
         <div class="w3-card w3-white">
-          <img src="/img/line.png" alt="Lights" style="width: 120%;" />
+          <img src="img/line.png" alt="Lights" style="width: 120%;" />
           <div class="w3-container">
             <h3>step 2</h3>
             <h4>Trade</h4>
@@ -236,7 +236,7 @@
       <div class="w3-quarter">
         <div class="w3-card w3-white">
           <img
-            src="/img/pop.png"
+            src="img/pop.png"
             alt="Mountains"
             style="width: 150%;"
           />
@@ -383,7 +383,7 @@
 
     <!-- Image of location/map -->
     <img
-      src="/img/bud.png"
+      src="img/bud.png"
       class="w3-image w3-greyscale-min"
       style="width: 100%;"
     />
