--- a/index.html
+++ b/index.html
@@ -145,8 +145,10 @@
   
     <!-- Team Container -->
 <div class="w3-container w3-padding-64 w3-center" id="team">
-  <h2>My works!</h2>
-  <p>Arts i've made prior years </p>
+  <h2>My works!</h2> 
+
+  <p>I am luz, i enjoy coding as well ad design for the most part i am a cartoon related artist
+    here are Arts i've made prior years </p>
   
   <div class="w3-row"><br>
   
@@ -167,7 +169,7 @@
             style="width: 105%;"
             class="w3-circle w3-hover-opacity"
           />
-          <h3>patrioge tributes </h3>
+          <h3>heritage tributes </h3>
           <p>Support to my country</p>
         </div>
 
@@ -198,11 +200,13 @@
     <!-- Work Row -->
     <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
       <div class="w3-quarter">
-        <h2> my process</h2>
+        <h2> my process/ experience and education  </h2>
         <p>
          the proccess begins with simple circles and lines with a gray color that will be used to plan the pose od the character or objects
          the next step is drawing the outline with black. this could be repeated twice if not three times to make sure the lines are neat
          then comes the fun part which is coloring. basic flat colors and finally shading and saturation to give colors a pop and demention.
+         i have done freelance work with internet costumers by compleating comitions for the most part my education is up to highschool coding 
+         i am self taught in design
         </p>
       </div>
 
